<resources>
	<string name="app_name">TrueHome</string>
	<string name="login_banner">Logowanie</string>
	<string name="login_label">Login</string>
	<string name="password_label">Hasło</string>
	<string name="sing_in_label">Zaloguj</string>
	<string name="sing_up_label">Zarejestruj</string>
	<string name="singed_up">Zarejestrowano</string>
	<string name="singed_in">Zalogowano</string>
	<string name="login_error_toast">Wystąpił błąd podczas logowania</string>
	<string name="invalid_login_toast">Błędny login lub hasło</string>
	<string name="registrationLabel">Rejestracja</string>
	<string name="rating_label">Ocena</string>
	<string name="nameLabel">Imię: </string>
	<string name="surnameLabel">Nazwisko: </string>
	<string name="emailLabel">E-mail: </string>
	<string name="loginLabel">Login: </string>
	<string name="passwordLabel">Hasło</string>
	<string name="re_passwordLabel">Powtórz hasło</string>
	<string name="registerButton">Zarejestruj</string>
	<string name="passwordLength">Hasło musi zawierać conajmniej 8 znaków</string>
	<string name="passwordDigitCase">Hasło musi zawierać conajmniej jedną cyfrę</string>
	<string name="passwordUpperCase">Hasło musi zawierać conajmniej jedną dużą literę</string>
	<string name="emailNoAt">Brak @ w adresie email</string>
	<string name="emailNoDot">Brak . w adresie email</string>
	<string name="emailWrong">Błędny adres email</string>
	<string name="noEmptyField">To pole nie może być puste</string>
	<string name="passwordsNoMatch">Podane hasła się nie zgadzają</string>
	<string name="loginTaken">Login zajęty</string>
	<string name="emailTaken">Email zajęty</string>
	<string name="registerError">Nie można zarejestrować</string>
	<string name="registerSuccess">Zarejestrowano</string>
	<string name="apartment_list_icon_desc">apartment thumbnail</string>
	<string name="apartment_number">Numer mieszkania</string>
	<string name="apartment_street">Ulica</string>
	<string name="apartment_city">Miasto</string>
	<string name="apartment_name">Nazwa mieszkania</string>
	<string name="apartment_photos_label">Zdjęcia</string>
	<string name="selection_limiter_pix">Można wybrać maksymalnie %d zdjęć</string>
	<string name="pix_selected">Wybrano</string>
	<string name="apartmentNumberPatternInfo">Numer budynku/numer mieszkania lub numer budynku</string>
	<string name="add_apartment">Dodaj apartament</string>
	<string name="delete_images_label">Usuń zdjęcia</string>
	<string name="delete_apartment_image">Usuń zdjęcie</string>
	<string name="camera_externalStorage_refused">Musisz zezwolić na dostęp do kamery oraz pamięci, żeby dodać zdjęcia</string>
	<string name="choose_photos">Zrób lub wybierz do 8 zdjęć</string>
	<string name="error_adding_apartment">Wystąpił błąd przy dodawaniu apartamentu</string>
	<string name="apartment_exists_info">Podany apartament już istnieje</string>
	<string name="add_apartment_button">dodaj apartment</string>
	<string name="apartment_city_label">Miasto:</string>
	<string name="apartment_desc_label">Opis:</string>
	<string name="apartment_rating_label">Średnia ocen apartamentu:</string>
	<string name="install_maps_dialog_no">nie</string>
	<string name="install_maps_dialog_yes">otwórz google play</string>
	<string name="install_maps_dialog_msg">Zainstalować teraz?</string>
	<string name="install_maps_dialog_title">Google Maps nie zainstalowane</string>
	<string name="data_download_error">Wystąpił problem z pobraniem danych</string>
	<string name="user_details_button">profil użytkownika</string>
	<string name="user_phoneNumber_label">Numer telefonu</string>
	<string name="wrong_phone_number">Podaj prawidłowy numer telefonu</string>
	<string name="max_people_label">Maksymalna ilość osób</string>
	<string name="price_label">Cena</string>
	<string name="area_label">Powierzchnia</string>
	<string name="wrong_number_label">Podaj prawidłową liczbę</string>
	<string name="set_as_thumbnail_label">Ustaw miniaturkę</string>
	<string name="enlarged_image_desc">enlarged image</string>
	<string name="area_with_square_meters">%1$s m\u00B2</string>
	<string name="session_expired_toast">Sesja wygasła</string>
	<string name="no_api_response_toast">Serwer nie odpowiada - sprawdź połączenie</string>
	<string name="no_internet_toast">Wymagane połączenie z Internetem</string>
	<string name="ratin_sufix">/5</string>
</resources>
