<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
	<androidx.cardview.widget.CardView
			android:id="@+id/image_cardView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			app:cardCornerRadius="8dp"
			app:cardElevation="4dp">
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical">
		<ImageView
				android:id="@+id/apartment_image"
				android:layout_width="100dp"
				android:layout_height="100dp"
				android:contentDescription="@string/apartment_list_icon_desc"/>
		<Button
				android:id="@+id/delete_image"
				android:text="@string/delete_apartment_image"
				android:background="@drawable/button_without_radius"
				android:textColor="@color/white"
				android:visibility="gone"
				android:layout_marginBottom="2dp"
				android:layout_width="match_parent"
				android:layout_height="match_parent"/>
		<Button
			android:id="@+id/thumbnail_button"
			android:text="@string/set_as_thumbnail_label"
			android:background="@drawable/button_without_radius"
			android:textColor="@color/white"
			android:visibility="gone"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>
		</LinearLayout>
	</androidx.cardview.widget.CardView>
</ScrollView>