<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
	<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/apartment_name_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginStart="30dp"
			android:layout_marginEnd="30dp"
			android:hint="@string/apartment_name"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">
		<EditText
				android:id="@+id/apartment_name_editText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:layout_gravity="center"/>
	</com.google.android.material.textfield.TextInputLayout>
	<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/apartment_city_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginStart="30dp"
			android:layout_marginEnd="30dp"
			android:hint="@string/apartment_city"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/apartment_name_wrapper"
			app:layout_constraintHorizontal_bias="0.0">
		<EditText
				android:id="@+id/apartment_city_editText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:layout_gravity="center"/>
	</com.google.android.material.textfield.TextInputLayout>
	<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/apartment_street_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginStart="30dp"
			android:layout_marginEnd="30dp"
			android:hint="@string/apartment_street"
			app:layout_constraintTop_toBottomOf="@+id/apartment_city_wrapper"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.0">
		<EditText
				android:id="@+id/apartment_street_editText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:layout_gravity="center"/>
	</com.google.android.material.textfield.TextInputLayout>
	<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/apartment_number_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginStart="30dp"
			android:layout_marginEnd="30dp"
			android:hint="@string/apartment_number"
			app:layout_constraintTop_toBottomOf="@+id/apartment_street_wrapper"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0">
		<EditText
				android:id="@+id/apartment_number_editText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:layout_gravity="center"/>
	</com.google.android.material.textfield.TextInputLayout>
		<LinearLayout
				android:id="@+id/linearWrapper1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginStart="30dp"
				android:layout_marginEnd="30dp"
				android:layout_marginTop="10dp"
				app:layout_constraintTop_toBottomOf="@+id/apartment_number_wrapper"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toStartOf="parent"
				app:layout_constraintHorizontal_bias="0.0">
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/maxPeople_wrapper"
					android:layout_width="200dp"
					android:layout_height="wrap_content"
					android:hint="@string/max_people_label">
				<EditText
						android:id="@+id/maxPeople_editText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="numberSigned"
						android:layout_gravity="center"/>
			</com.google.android.material.textfield.TextInputLayout>
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/apartment_price_wrapper"
					android:layout_width="138dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="10dp"
					android:hint="@string/price_label">
				<EditText
						android:id="@+id/apartment_price_editText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="numberDecimal"
						android:layout_gravity="center"/>
			</com.google.android.material.textfield.TextInputLayout>
		</LinearLayout>
		<LinearLayout
				android:id="@+id/linearWrapper2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginStart="30dp"
				android:layout_marginEnd="30dp"
				android:layout_marginTop="10dp"
				app:layout_constraintTop_toBottomOf="@+id/linearWrapper1"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toStartOf="parent"
				app:layout_constraintHorizontal_bias="0.0">
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/user_phoneNumber_wrapper"
					android:layout_width="200dp"
					android:layout_height="wrap_content"
					android:hint="@string/user_phoneNumber_label">
				<EditText
						android:id="@+id/user_phoneNumber_editText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="phone"
						android:layout_gravity="center"/>
			</com.google.android.material.textfield.TextInputLayout>
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/apartment_area_wrapper"
					android:layout_width="138dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="10dp"
					android:hint="@string/area_label">
				<EditText
						android:id="@+id/apartment_area_editText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="numberSigned"
						android:layout_gravity="center"/>
			</com.google.android.material.textfield.TextInputLayout>
		</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>