<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
			xmlns:app="http://schemas.android.com/apk/res-auto"
			xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="20dp">
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/login_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/login_label"
				android:layout_marginStart="30dp"
				android:layout_marginEnd="30dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.481"
				app:layout_constraintTop_toTopOf="parent">
			<EditText
					android:id="@+id/loginEditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPersonName"
					android:layout_gravity="center"
					android:drawableStart="@drawable/login"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/password_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password_label"
				android:layout_marginTop="10dp"
				android:layout_marginStart="30dp"
				android:layout_marginEnd="30dp"
				app:layout_constraintTop_toBottomOf="@+id/login_wrapper"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent">
			<EditText
					android:id="@+id/editPassword"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPassword"
					android:ems="10"
					android:drawableStart="@drawable/password"/>
		</com.google.android.material.textfield.TextInputLayout>
	<Button
			android:id="@+id/registerButton"
			android:text="@string/sing_up_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="44dp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="28dp"
			android:layout_gravity="center"
			android:padding="10dp"
			android:background="@drawable/button"
			android:textColor="@color/white"
			android:gravity="center"
			app:layout_constraintTop_toBottomOf="@+id/password_wrapper"
			app:layout_constraintEnd_toStartOf="@+id/loginButton"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.235"/>
	<Button
			android:id="@+id/loginButton"
			android:text="@string/sing_in_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="44dp"
			android:layout_marginEnd="28dp"
			android:layout_gravity="center"
			android:background="@drawable/button"
			android:textColor="@color/white"
			android:gravity="center"
			android:padding="10dp"
			app:layout_constraintTop_toBottomOf="@+id/password_wrapper"
			app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>