<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/apartment_name_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginStart="30dp"
				android:layout_marginEnd="30dp"
				android:hint="@string/nameLabel"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">
			<EditText
					android:id="@+id/apartment_name_editText"
					android:drawableStart="@drawable/person"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPersonName"
					android:layout_gravity="center"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/apartment_city_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginStart="30dp"
				android:layout_marginEnd="30dp"
				android:hint="@string/surnameLabel"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/apartment_name_wrapper"
				app:layout_constraintHorizontal_bias="0.0">
			<EditText
					android:id="@+id/apartment_city_editText"
					android:drawableStart="@drawable/person"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPersonName"
					android:layout_gravity="center"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/apartment_street_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginStart="30dp"
				android:layout_marginEnd="30dp"
				android:hint="@string/emailLabel"
				app:layout_constraintTop_toBottomOf="@+id/apartment_city_wrapper"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintHorizontal_bias="0.0">
			<EditText
					android:id="@+id/apartment_street_editText"
					android:drawableStart="@drawable/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textEmailAddress"
					android:layout_gravity="center"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/apartment_number_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginStart="30dp"
				android:layout_marginEnd="30dp"
				android:hint="@string/loginLabel"
				app:layout_constraintTop_toBottomOf="@+id/apartment_street_wrapper"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0">
			<EditText
					android:id="@+id/apartment_number_editText"
					android:drawableStart="@drawable/login"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPersonName"
					android:layout_gravity="center"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/password_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginStart="30dp"
				android:layout_marginEnd="30dp"
				android:hint="@string/passwordLabel"
				app:layout_constraintTop_toBottomOf="@+id/apartment_number_wrapper"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:passwordToggleEnabled="true">
			<EditText
					android:id="@+id/password_editText"
					android:drawableStart="@drawable/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPassword"
					android:layout_gravity="center"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/rePassword_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginStart="30dp"
				android:layout_marginEnd="30dp"
				android:hint="@string/re_passwordLabel"
				app:layout_constraintTop_toBottomOf="@+id/password_wrapper"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:passwordToggleEnabled="true">
			<EditText
					android:id="@+id/rePassword_editText"
					android:drawableStart="@drawable/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPassword"
					android:layout_gravity="center"/>
		</com.google.android.material.textfield.TextInputLayout>
		<Button
				android:id="@+id/register_button"
				android:text="@string/registerButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:layout_marginBottom="8dp"
				android:layout_marginEnd="30dp"
				android:layout_marginStart="30dp"
				android:gravity="center"
				android:background="@drawable/button"
				android:textColor="@color/white"
				app:layout_constraintTop_toBottomOf="@+id/rePassword_wrapper"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>