<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

	<data>
		<variable name="viewModel" type="com.jakdor.apapp.ui.userPanel.UserPanelViewModel"/>
	</data>

	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
			android:id="@+id/swipe_refresh_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/materialGrey">

		<androidx.core.widget.NestedScrollView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:fillViewport="true"
				app:layout_behavior="@string/appbar_scrolling_view_behavior">

			<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<LinearLayout
						android:layout_margin="10dp"
						android:orientation="horizontal"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">
					<TextView
							android:id="@+id/nameTextView"
							android:text="@string/nameLabel"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:textSize="18sp"
							android:background="@drawable/rounded_corner"
							android:textColor="@color/white"/>
					<TextView
							android:id="@+id/showNameTextView"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:textSize="22sp"
							android:layout_marginStart="10dp"/>

				</LinearLayout>

				<LinearLayout
						android:layout_margin="10dp"
						android:orientation="horizontal"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">
					<TextView
							android:id="@+id/surnameTextView"
							android:text="@string/surnameLabel"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:textSize="18sp"
							android:background="@drawable/rounded_corner"
							android:textColor="@color/white"/>
					<TextView
							android:id="@+id/showSurnameTextView"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:textSize="22sp"
							android:layout_marginStart="10dp"/>

				</LinearLayout>

				<LinearLayout
						android:layout_margin="10dp"
						android:orientation="horizontal"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

					<TextView
							android:id="@+id/loginTextView"
							android:text="@string/loginLabel"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:textSize="18sp"
							android:background="@drawable/rounded_corner"
							android:textColor="@color/white"/>
					<TextView
							android:id="@+id/showLoginTextView"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:textSize="22sp"
							android:layout_marginStart="10dp"/>

				</LinearLayout>

				<LinearLayout
						android:layout_margin="10dp"
						android:orientation="horizontal"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">
					<TextView
							android:id="@+id/emailTextView"
							android:text="@string/emailLabel"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:textSize="18sp"
							android:background="@drawable/rounded_corner"
							android:textColor="@color/white"/>
					<TextView
							android:id="@+id/showEmailTextView"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:textSize="22sp"
							android:layout_marginStart="10dp"/>

				</LinearLayout>

				<RatingBar
						android:id="@+id/apartment_rating_bar"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:layout_gravity="center"
						android:numStars="5"
						android:isIndicator="true"/>

				<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/item_recycler"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
				/>
			</LinearLayout>


		</androidx.core.widget.NestedScrollView>

	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>
